# ZYURA

./: .gitignore  README.md  architecture-design.md  project-definition.md  user-requirements.md
contracts/: .gitignore  Anchor.toml  README.md  env.example  foundry.toml  package.json  pnpm-lock.yaml
contracts/cache/: solidity-files-cache.json
contracts/programs/zyura/: Cargo.toml
contracts/programs/zyura/src/: lib.rs
contracts/programs/zyura/src/errors/: mod.rs
contracts/programs/zyura/src/instructions/: admin.rs  initialize.rs  liquidity.rs  mod.rs  policy.rs  product.rs
contracts/programs/zyura/src/state/: mod.rs
contracts/script/: Deploy.s.sol  DeployLocal.s.sol
contracts/scripts/: fetch-config.js
contracts/src/: FlightInsurance.sol  FlightOracleAdapter.sol  PayoutVault.sol  PolicyRegistry.sol  PremiumVault.sol
contracts/tests/: admin.test.ts  cleanup.ts  initialization.test.ts  liquidity.test.ts  policy-payout.test.ts  policy-purchase.test.ts  policy.test.ts  product.test.ts  setup.ts  zyura.ts  zz-cleanup.ts
frontend/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  pages.md  pnpm-lock.yaml  tailwind.config.js
frontend/public/: robots.txt  sitemap-index.xml  sitemap.xml
frontend/scripts/: .mnemonic.example  admin.ts  check-config.ts  check-policy.ts  close-and-reinit-config.ts  create-products-manual.ts  create-products.ts  deposit.ts  find-payout-tx.ts  fix-config-account.ts  generate-flight-metadata.ts  generate-sitemap.js  init-config-manual.ts  list-policies.ts  migrate-config-structure.ts  migrate_policies.ts  (+7 more)
(+72 files in other folders)
