[package]
name = "zyura"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zyura"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-token-metadata = "5"
bincode = "1.3.3"



